/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "google/protobuf/any.proto";
import "basekv/Type.proto";
import "basekv/Snapshot.proto";
import "basekv/raft/ClusterConfig.proto";
import "basekv/raft/Enums.proto";
package basekv;

option java_multiple_files = true;
option java_package = "org.apache.bifromq.basekv.proto";
option optimize_for = SPEED;

message SplitHint{
  string type = 1;
  map<string, double> load = 2;
  optional bytes splitKey = 3;
}

message KVRangeDescriptor {
  basekv.KVRangeId id = 1;
  uint64 ver = 2;
  Boundary boundary = 3;
  basekv.State.StateType state = 4;
  raft.RaftNodeStatus role = 5;
  raft.ClusterConfig config = 6;
  map<string, raft.RaftNodeSyncState> syncState = 7;
  map<string, double> statistics = 8;
  repeated SplitHint hints = 9;
  google.protobuf.Any fact = 10;
  uint64 hlc = 11;
  bool readyForQuery = 12;
}

message KVRangeStoreDescriptor {
  string id = 1;
  map<string, double> statistics = 2;
  repeated KVRangeDescriptor ranges = 3;
  uint64 hlc = 4;
  map<string, string> attributes = 5;
}
